create index.html file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="logo/Untitled8_20241201182055.png" alt="Study Buddy Logo" class="logo">
+        <img src="logo/Untitled8_20241201182055.png"Study Buddy Logo" class="logo">
         <h1></h1>
     </header>
 
