--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="logo/studylogo" class="logo">
+        <img src="logo/studylogo.png" alt= "Study Buddy Logo" class="logo">
         <h1></h1>
     </header>
 
